Solution to problem Make Two Arrays Equal by Reversing Subarrays

--- a/1460/1460.ipynb
+++ b/1460/1460.ipynb
@@ -11,8 +11,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Question</b>:\n",
-    "Hii"
+    "<b>Question:</b>\n",
+    "You are given two integer arrays of equal length target and arr. In one step, you can select any non-empty subarray of arr and reverse it. You are allowed to make any number of steps.\n",
+    "\n",
+    "Return true if you can make arr equal to target or false otherwise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Approach1: </b>\n",
+    "The basic idea is that if the elements in the arrays are same then swaps can be made to make the arrays equal. One way to do that is by sorting the arrays and checking if the sorted arrays are equal.\n",
+    "\n",
+    "Time Complexity: 0(n*log(n)), Space Complexity: 0(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def canBeEqual(self, target: List[int], arr: List[int]) -> bool:\n",
+    "        return sorted(target)==sorted(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Approach2: </b>\n",
+    "To reduce the time complexity, we create a counter dictionary that has the elements in the arrays and its frequesncies. We equate the two dictionaries to get the answer\n",
+    "\n",
+    "Time Complexity: 0(n), Space Complexity: 0(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def canBeEqual(self, target: List[int], arr: List[int]) -> bool:\n",
+    "        return Counter(target)==Counter(arr)"
    ]
   }
  ],
