Make Two Arrays Equal by Reversing Subarrays

--- a/1460/1460.ipynb
+++ b/1460/1460.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1460. Make Two Arrays Equal by Reversing Subarrays (Easy)"
+    "<b>1460. Make Two Arrays Equal by Reversing Subarrays (Easy)</b>"
    ]
   },
   {
