Minimum Swaps to Group All 1's Together II

--- a/2134/2134.ipynb
+++ b/2134/2134.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*2134. Minimum Swaps to Group All 1's Together II (Medium)*"
+    "<b>2134. Minimum Swaps to Group All 1's Together II (Medium)</b>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Question*:\n",
+    "<b>Question:</b>\n",
     "\n",
     "A swap is defined as taking two distinct positions in an array and swapping the values in them.\n",
     "\n",
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Approach1*:\n",
+    "<b>Approach:</b>\n",
     "\n",
     "First get the number of ones and zeroes in the list. Our aim is to find a window wherein with minimum swaps you can get all the elements equal. This means, we'll first create a window of constant size of total number of zeroes in the list and slide it across the list checking the number of ones present in the window. Since these ones have to be swapped with zeroes, the window with the minimum number of ones is the one we're looking for. We do the same thing with a window of size number of ones in the list. The final aswer will be the minimum of these two.\n",
     "\n",
@@ -35,11 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
