Number of Senior Citizens

--- a/2678/2678.ipynb
+++ b/2678/2678.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2678. Number of Senior Citizens (Easy)"
+    "<b>2678. Number of Senior Citizens (Easy)</b>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question: \n",
+    "<b>Question:</b> \n",
     "You are given a 0-indexed array of strings details. Each element of details provides information about a given passenger compressed into a string of length 15. The system is such that:\n",
     "\n",
     "The first ten characters consist of the phone number of passengers.\n",
@@ -22,16 +22,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
    "source": [
-    "Approach1:\n",
+    "<b>Approach1:</b>\n",
     "For each element in the list, convert the 12th and 13th character to integer and keep count of the number of elements greater than 60.\n",
     "Time Complexity: 0(n)\n",
     "Space Complexity: 0(1)"
@@ -40,11 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
@@ -60,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Approach2:\n",
+    "<b>Approach2:</b>\n",
     "This is a single line approach(just to test me out). It creates a list of all elements with the age greater than 60 and returns the length of that list.\n",
     "Time Complexity: 0(n)\n",
     "Space Complexity: 0(n)"
