Find if Digit Game Can Be Won

--- a/3232/3232.ipynb
+++ b/3232/3232.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3232. Find if Digit Game Can Be Won (Easy)"
+    "<b>3232. Find if Digit Game Can Be Won (Easy)</b>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question:\n",
+    "<b>Question:</b>\n",
     "You are given an array of positive integers nums.\n",
     "\n",
     "Alice and Bob are playing a game. In the game, Alice can choose either all single-digit numbers or all double-digit numbers from nums, and the rest of the numbers are given to Bob. Alice wins if the sum of her numbers is strictly greater than the sum of Bob's numbers.\n",
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "<b>Approach:</b>\n",
     "Iterate through the list and get the sum of:\n",
     "a) All the elements\n",
     "b) Either single digit numbers or double digit numbers\n",
@@ -37,11 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
