Find the Count of Numbers Which Are Not Special

--- a/3233/3233.ipynb
+++ b/3233/3233.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3233. Find the Count of Numbers Which Are Not Special"
+    "<b>3233. Find the Count of Numbers Which Are Not Special</b>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question:\n",
+    "<b>Question:</b>\n",
     "You are given 2 positive integers l and r. For any number x, all positive divisors of x except x are called the proper divisors of x.\n",
     "\n",
     "A number is called special if it has exactly 2 proper divisors. For example:\n",
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "<b>Approach:</b>\n",
     "Since special numbers have only two divisors except the number itself then the divisor except 1 should be a prime number. This brings us to the conclusion that special numbers are squares of prime numbers.\n",
     "\n",
     "The task at hand therefore is to find the number of primes in the range [sqrt(l),sqrt(r)]. The classic way of checking till the square root of each number if there exists a divisor for it wont give TLE. To optimise finding the prime numbers, we use Sieve of Eratosthenes.\n",
@@ -40,11 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
