Count the Number of Good Nodes

--- a/Contest Problems/Count the Number of Good Nodes/3249.ipynb
+++ b/Contest Problems/Count the Number of Good Nodes/3249.ipynb
@@ -38,7 +38,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Approach:</b>\n"
+    "<b>Approach:</b>\n",
+    "The basic idea here is to use DFS and then check how many children does each node have. The tricky part here was making the tree from the given edges which is done by creating a dict for the tree and each edge's nodes are marked as each other's parent and child. We use a set to avoid revisiting the nodes which are already visited and this also helps clear the issue of counting nodes of parent as the child.\n",
+    "\n",
+    "Time Complexity: 0(n)\n",
+    "Space Complexity: 0(n)"
    ]
   },
   {
