Set Matrix Zeroes

--- a/Arrays/Set Matrix Zeroes/73.ipynb
+++ b/Arrays/Set Matrix Zeroes/73.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "1 <= m, n <= 200\n",
     "\n",
-    "-231 <= matrix[i][j] <= 231 - 1"
+    "-2^31 <= matrix[i][j] <= 2^31 - 1"
    ]
   },
   {
