Count Sub Islands

--- a/Daily Problems/1905. Count Sub Islands/1905.ipynb
+++ b/Daily Problems/1905. Count Sub Islands/1905.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "<b>Approach:</b>\n",
     "\n",
-    "The approach to the question is quite simple but I messed up in the beginning. Lets first understand the question well, we have two gids: grid1 and grid2, we are asked to find the number of islands in grid 2 such that this island is a part of an island in grid1. Now what does it mean? Should we find out all the islands in grid1 and grid2 and check how many such islands are there in grid2 wherein all the indexes are present in an island in grid1? It can work but it is a very inefficient solution. If the indexes of an island in grid2 form an island then wont the combination of those indexes form an island in grid1 too? So what we do is, find out the islands in grid2 and check for each island in grid2 is there land in grid1 too. If the answer is yes then we append the answer.\n",
+    "The approach to the question is quite simple but I messed up in the beginning. Lets first understand the question well, we have two grids: grid1 and grid2, we are asked to find the number of islands in grid 2 such that this island is a part of an island in grid1. Now what does it mean? Should we find out all the islands in grid1 and grid2 and check how many such islands are there in grid2 wherein all the indexes are present in an island in grid1? It can work but it is a very inefficient solution. If the indexes of an island in grid2 form an island then wont the combination of those indexes form an island in grid1 too? So what we do is, find out the islands in grid2 and check for each island in grid2 is there land in grid1 too. If the answer is yes then we append the answer.\n",
     "\n",
     "Time Complexity: 0(m*n)\n",
     "Space Complexity: 0(m*n)"
